style: Cursor. Fixed countries names tooltip.
Added custom cursors. Fixed country name not showing correctly.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,10 @@
   font-weight: bold;
 }
 
+html {
+  cursor: url("../assets/cursor.svg"), auto;
+}
+
 body {
   font-family: "Space Mono", sans-serif;
   /* background-image: url("../assets/images/360_F_65482539_C0ZozE5gUjCafz7Xq98WB4dW6LAhqKfs.jpg"); */
@@ -40,4 +44,8 @@ body {
 
 #loggedModal {
   border-color: #39578a;
+}
+
+.cursor-pointer {
+  cursor: url("../assets/cursor-pointer.svg"), auto;
 }
